I made the rooms properly to direct the links to the destinations.
I added routes in the game.py file as well as changed the urls for those
routes.

I tweeked the template files to direct the routes to the rooms.

--- a/ww2maniaApp/templates/base.html
+++ b/ww2maniaApp/templates/base.html
@@ -1,17 +1,21 @@
 <!--This is for each user to either log out, log in or register
   It will link of sorts the content-->
 <!doctype html>
-<title>{% block title %}{% endblock %} - ww2mania</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>ww2Mania</h1>
-</nav>
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %} - ww2mania</title>
+  </head>
+      <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <body>
+      <nav>
+        <a href="{{url_for('game.welcome')}}" class='start-game'>Play WW2mania</a>
+
+      </nav>
+      <main>
+        <section class='content'>
+          {% block content %}{% endblock %}
+        </section>
+      </main>
+    </body>
+</html>
