--- a/ww2maniaApp/templates/game/howToPlay.html
+++ b/ww2maniaApp/templates/game/howToPlay.html
@@ -2,7 +2,7 @@
 <!-- Is the header -->
 {% block header %}
 
-  <h1>{% block title %}How to play ww2mania{% endblock %}</h1>
+  <h1>{% block title %}How to play{% endblock %}</h1>
 
 
 {% endblock %}<!--End of header-->
@@ -11,7 +11,7 @@
 
   <article class="post" >
       <header>
-        <a href="/game/menu">Back to Menu</a>
+        <a href="/">Back to Menu</a>
         <div>
         </div>
 
@@ -22,7 +22,7 @@
 
       <p>So the rules are simple. Read the text and give <br>
       an answer to the question then you will be sent down a
-      path.</p>
+      path.Your goal is to survive the war.</p>
 
     </article>
 
