--- a/ww2maniaApp/templates/game/room.html
+++ b/ww2maniaApp/templates/game/room.html
@@ -9,23 +9,23 @@
 
 {% block content %}
 
-  <article class="post" >
+
       <header>
-        <a class='action' href="/game/menu">Exit Game</a>
+        <a class='action' href="{{ url_for('menu')}}">Exit Game</a>
         <div>
           <h1>Room 1</h1>
         </div>
 
       </header>
 
-      <p>This is room 1</p>
+      <p>This is room one</p>
 
       <form method="post">
-        <label for="room1Reply">Anwser for question</label><!--TO DO -->
-        <input name="answer" id="room1" required><!--make classes for the test room to
+        <label for="room1Reply">Anwser for question soldier!</label><!--TO DO -->
+        <input name="answer" id="room" required><!--make classes for the test room to
           return the value and move to the next room so game can play-->
         <input type="submit" value="Answer">
       </form>
-    </article>
+
 
 {% endblock %}
