--- a/ww2maniaApp/templates/game/room.html
+++ b/ww2maniaApp/templates/game/room.html
@@ -11,9 +11,9 @@
 
 
       <header>
-        <a class='action' href="{{ url_for('menu')}}">Exit Game</a>
+        <a class='action' href="{{ url_for('game.menu')}}">Exit Game</a>
         <div>
-          <h1>Room 1</h1>
+          <h1>Welcome Soldier</h1>
         </div>
 
       </header>
