--- a/ww2maniaApp/templates/game/dead.html
+++ b/ww2maniaApp/templates/game/dead.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h1>Game Over</h1>
   <p>Looks like you died in battle</p>
-  <a href="{{ url_for('base.html') }}">Go back to menu</a>
+  <a href="{{ url_for('game.menu.html') }}">Go back to menu</a>
 {% endblock %}
