I completed four  main tasks.
1. I edited the tests to make them more compatable with the new template system.

2. I got rid of templates that I did not need and created a automation of
template creation.

3. I created a room class in the room.py for the title and message of each room I will create then
I imported that to the game.py file.

4. I added several other files including the char.py and items.py for further
customization down the road.

--- a/ww2maniaApp/templates/base.html
+++ b/ww2maniaApp/templates/base.html
@@ -13,7 +13,7 @@
           {% block content %}
           <h1>Welcome this is WW2 mania</h1>
           <a href="{{ url_for('game.welcome') }}" class='start-game'>Start Game</a>
-          <a href="{{ url_for('game.howtoplay') }}" class='description'>How To Play</a>
+          <a href="{{ url_for('game.howtoplay') }}" class='info'>How To Play</a>
           {% endblock %}
         </section>
       </main>
