--- a/ww2maniaApp/templates/game/room.html
+++ b/ww2maniaApp/templates/game/room.html
@@ -2,7 +2,7 @@
 <!-- Is the header -->
 {% block header %}
 
-  <h1>{% block title %}First Room{% endblock %}</h1>
+  <h1>{% block title %}{{ title }}{% endblock %}</h1>
 
 
 {% endblock %}<!--End of header-->
@@ -13,18 +13,18 @@
       <header>
         <a class='action' href="{{ url_for('game.menu')}}">Exit Game</a>
         <div>
-          <h1>Welcome Soldier</h1>
+          <h1>{{ title }}</h1>
         </div>
 
       </header>
 
-      <p>This is room one</p>
+      <p>{{ message }}</p>
 
-      <form method="post">
-        <label for="room1Reply">Anwser for question soldier!</label><!--TO DO -->
+      <form method="post" class=commands>
+        <label for="room1Reply">Anwser the question soldier!</label><!--TO DO -->
         <input name="answer" id="room" required><!--make classes for the test room to
           return the value and move to the next room so game can play-->
-        <input type="submit" value="Answer">
+        <input type="submit" value="Anwser">
       </form>
 
 
