--- a/ww2maniaApp/templates/base.html
+++ b/ww2maniaApp/templates/base.html
@@ -11,7 +11,8 @@
       <main>
         <section class='content'>
           {% block content %}
-          <h1>Welcome this is WW2 mania</h1>
+          <h1>This is ww2mania text adventure game</h1>
+          <p>Please choose a menu option and proceed</p>
           <a href="{{ url_for('game.welcome') }}" class='start-game'>Start Game</a>
           <a href="{{ url_for('game.howtoplay') }}" class='info'>How To Play</a>
           {% endblock %}
