I completed two main tasks.
First, I added more to my tests to test the upcoming rooms
I wanted to create at the time.

Second, I created those rooms and linked them to the proper rooms
so the game can function.

--- a/ww2maniaApp/templates/game/room.html
+++ b/ww2maniaApp/templates/game/room.html
@@ -12,7 +12,12 @@
 
       </header>
 
-      <p>{{ message }}</p><!-- Describes to the player what to do next-->
+      <p class=desc>{{ message }}</p><!-- Describes to the player what to do next-->
+      <p class=item>{{ items }}</p>
+
+      <div class="stats">
+        <p>{{ stats }}</p>
+      </div>
 
       <form method="post" class=commands>
         <label for="room1Reply">Answer the question soldier!</label><!--TO DO -->
